# xPoster

./: .gitignore  README.md  pyproject.toml  sitecustomize.py  tmp_issue.md
.github/workflows/: daily-drafts.yml  post-approved.yml  tests.yml
config/: tweet_config.json
src/xposter/: __init__.py  approval.py  cli.py  config.py  drafts.py  issue.py  x_api.py
tests/: test_approval.py  test_cli.py  test_drafts.py  test_issue.py
